--- a/cuhkbeamer.sty
+++ b/cuhkbeamer.sty
@@ -31,6 +31,8 @@
 \usetikzlibrary{patterns}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{url}
+\usepackage{etoolbox}
 % \defaultfontfeatures{Mapping=tex-text}
 
 
@@ -103,7 +105,7 @@
 
 \hypersetup{
     colorlinks,
-    linkcolor=cuhkpurple,
+    linkcolor=,
     urlcolor=cuhkpurple
 }
 
