--- a/ref.bib
+++ b/ref.bib
@@ -9,3 +9,22 @@
  volume = {30},
  year = {2017}
 }
+
+@article{hochreiter1997long,
+  title = {Long Short-Term Memory},
+  author = {Hochreiter, Sepp and Schmidhuber, Jürgen},
+  date = {1997-11},
+  journaltitle = {Neural Computation},
+  shortjournal = {Neural Comput.},
+  volume = {9},
+  number = {8},
+  pages = {1735--1780},
+  publisher = {{MIT Press}},
+  location = {{Cambridge, MA, USA}},
+  issn = {0899-7667},
+  doi = {10.1162/neco.1997.9.8.1735},
+  url = {http://dx.doi.org/10.1162/neco.1997.9.8.1735},
+  acmid = {1246450},
+  issue_date = {November 15, 1997},
+  pagetotal = {46}
+}
