--- a/cuhkbeamer.sty
+++ b/cuhkbeamer.sty
@@ -31,10 +31,10 @@
 \usetikzlibrary{patterns}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
-\usepackage{url}
-\usepackage{etoolbox}
 % \defaultfontfeatures{Mapping=tex-text}
 
+\usepackage{etoolbox}
+\usepackage{lmodern} % enhanced version default font Latin Modern in LaTeX.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% Numbering
