--- a/cuhkbeamer.sty
+++ b/cuhkbeamer.sty
@@ -116,6 +116,7 @@
 
 \newcommand{\slidesection}[1]{
     \section{#1}
+    \setcounter{framecount}{1}
     % \begin{frame}[c]{}
     %     \LARGE{Part \thesection. #1}
     % \end{frame}
